2004-06-20 multipath-tools-0.2.4
	* [multipathd] break free from system's libsysfs for now
	  as it is not that common these days
	* [multipath] introduce per LUN policies in the config
	  file : path_grouping_policy, path_selector and
	  path_selector_args are supported.
	  See updated sample config file.
	* [multipath] move ->iopolicy to multipath struct (from
	  path struct)
	* [multipath] fill the voids left in the config file with
	  defaults
	* [multipath] group config & flags in a global struct *
	* [multipath] fix segfault when no config file (was a 
	  regression since hwtable vectorisation in 0.2.2)
	* [multipath] default path selector override in config file
	* [multipath] don't play with strings in pgpolicies, leave
	  that to a new assemble_map fn. policies now use vector
	* [multipathd] compilation fix for gentoo (Franck Denis)
	* [multipath] strcmp fix (Franck Denis)
2004-06-14 multipath-tools-0.2.3
	* [multipath] group_by_serial try to be smart with LUN
	  balancing across controlers (for STK / LSI) :
	  1st multipath : 1st pg made of path through 1st controler
	  2nd multipath : 1st pg made of path through 2nd controler
	  3rd multipath : 1st pg made of path through 1st controler
	  ...
	* [multipath] drop .pindex[] in struct multipath in favor
	  of a *paths vector : much cleaner
	* [multipath] fix group_by_serial pgpolicy broken by
	  vectorisation in 0.2.2
	* add a StorageTek array in the sample multipath.conf
	* [multipathd] strcmp fix from Franck Denis
	* [multipathd] convert to vector api
	* [multipathd] add a configfile option for path checking
	  interval. See sample configfile for synthax.
2004-06-07 multipath-tools-0.2.2
	* [multipath] leave out 2.4 compat code. Is there
	  interest anyway ?
	* [multipath] convert all_paths table to vector api.
	  Rename to pathvec. Get rid of max_devs
	* [multipath] convert mp table to vector api
	* convert blacklist to vector api
	* 2.6.7-rc? adds _user annotations to scsi/sg.h, causing